Preenchimento de area da educação

--- a/index.html
+++ b/index.html
@@ -114,6 +114,27 @@
             </div>
           </div>
   
+          <div class="w3-container w3-card w3-white">
+            <h2 class="w3-text-grey w3-padding-16"><i
+                class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Uninassau</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span class="w3-tag w3-teal w3-round">2016 - 2020</span></h6>
+              <p>Information system</p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+              <p>TODO</p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
+              <p>TODO</p><br>
+            </div>
+          </div>
   
           <!-- End Right Column -->
         </div>
