arrumação dos links no footer

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Find me on social media.</p>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-      <p>Powered by <a href="https://www.linkedin.com/in/diego-santos-8b4256132/" target="_blank">w3.css</a></p>
+      <a href="https://www.linkedin.com/in/diego-santos-8b4256132/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
   </body>
